k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.29.0 (997957870)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.29.0 (997957870)
      creationTimestamp: null
      labels:
        io.kompose.network/cna-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: NEXTAUTH_SECRET
              value: Aloento
            - name: POSTGRES_PRISMA_URL
              value: postgresql://postgres:postgres@db:5432/cna?sslmode=disable
          image: web
          name: web
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
